# ferremas

./: .gitignore  Pequeño Tutorial.md  README.md  nx.json  package-lock.json  package.json
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
apps/: Pequeño Tutorial.md
apps/backend-ferremas/: README.md  database.sqlite3  project.json  pyproject.toml
apps/backend-ferremas/backend/: __init__.py  config.py  create_db.py  create_products.py  create_user.py  crud_productos.py  crud_users.py  main.py  verify_password.py  webpay.py
apps/backend-ferremas/backend/database/: models.py
apps/backend-ferremas/tests/: test_hello.py
apps/frontend-ferremas/: .eslintrc.json  jest.config.ts  project.json
apps/frontend-ferremas-e2e/: playwright.config.ts  project.json
apps/frontend-ferremas-e2e/src/e2e/: app.cy.ts
apps/frontend-ferremas/src/: index.html
apps/frontend-ferremas/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  nx-welcome.component.ts
apps/frontend-ferremas/src/app/components/admin/: admin.component.html  admin.component.scss  (+1 more)
apps/frontend-ferremas/src/app/guards/: auth.guard.ts
apps/frontend-ferremas/src/app/interfaces/: product.ts  producto.ts  user.ts
apps/frontend-ferremas/src/app/tienda/: tienda.component.html  tienda.component.ts
apps/frontend-ferremas/src/enviroments/: enviroment.dev.ts
apps/frontend-ferremas/src/services/: admin.service.ts  bodega.service.ts  carrito.service.ts  login.service.ts  product-list.service.ts  product.service.ts
(+20 files in other folders)
