[tool.coverage.run]
branch = true
source = [ "backend" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/./apps/backend-ferremas/html' --cov-report xml:'../../coverage/./apps/backend-ferremas/coverage.xml' --html='../../reports/./apps/backend-ferremas/unittests/html/index.html' --junitxml='../../reports/./apps/backend-ferremas/unittests/junit.xml'"

[tool.poetry]
name = "src"
version = "1.0.0"
description = "Backend de Ferremas"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "backend"

  [tool.poetry.dependencies]
  python = ">=3.9,<=3.12.3"
  fastapi = "^0.111.0"
  pydantic-settings = "^2.2.1"
  sqlmodel = "^0.0.18"
  requests = "^2.32.2"
  numpy = "^1.26.4"
  transbank-sdk = "^5.0.0"
  flask = "^3.0.3"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
